--- a/p10-http/package.json
+++ b/p10-http/package.json
@@ -24,6 +24,7 @@
     "ngx-bootstrap": "^8.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@angular/compiler-cli": "~12.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.40",
+    "firebase-tools": "^10.7.0",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.16",
     "karma-chrome-launcher": "~3.1.0",
